--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
         </div>
         <div id="footer">
           Powered by <a href="http://lanrails.jonnyfunfun.com/" target="_blank">LANRails</a>, Open-source LAN Party Management: Rails Style!<br/>
-          Copyright &copy; 2009: Jonathan Enzinna.  Licensed under the GNU/GPL.<br/>
+          Copyright &copy; 2009: Jonathan Enzinna.  Licensed under the MIT License.<br/>
           <a href="http://lanrails.jonnyfunfun.com/" target="_blank">
             <img src="/images/lanrails.png" border="0" alt="Powered by LANRails" style="margin-top: 4px;"/>
           </a>
