--- a/app/views/accounts/view.html.erb
+++ b/app/views/accounts/view.html.erb
@@ -1,2 +1,4 @@
-<h1>Account#profile</h1>
-<p>Find me in app/views/account/profile.html.erb</p>
+<img class="float_left" src="<%= gravatar_url(@user.email) %>" style="padding-right: 8px;"/>
+<h1><%= @user.username %></h1>
+<br/>
+<%= @user.bio %>
