--- a/app/views/posts/create.html.erb
+++ b/app/views/posts/create.html.erb
@@ -1,2 +1,22 @@
-<h1>Post#create</h1>
-<p>Find me in app/views/post/create.html.erb</p>
+<h1><%= link_to 'Forums', forums_path %> &raquo; <%= link_to @forum.name, forum_topics_path(:forum_id => @forum.id) %> &raquo; Reply to <%= link_to @topic.title, forum_topic_posts_path %></h1>
+<br/>
+<% form_for :post, @post, :url => {:controller => 'posts', :forum_id => @forum.id, :action => 'create'} do |f| %>
+  <span class="error" style="text-align: center; margin: auto;">
+    <%= error_messages_for 'post', :header_message => "Please Try Again!", :message => "There were the following errors when trying to create the reply" %>
+  </span>
+  <table width="75%" align="center" border="0">
+    <tr>
+      <td valign="top" colspan="2"><b>Message:</b><br/>
+        <%= text_area :post_body, nil, :size => "65x8",:class => "mceEditor" %><br/>
+        <div class="center">
+          <% if User.current.moderator? then %>
+            <%= check_box :sticky, :value => 1 %> Make topic a sticky?<br/>
+            <%= check_box :lock, :value => 1 %> Lock the topic?
+            <br/><br/>
+          <% end %>
+          <%= submit_tag "Post Reply", :class => 'btn' %>
+        </div>
+      </td>
+    </tr>
+  </table>
+<% end %>
