--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -15,6 +15,10 @@ body {
     float: left;
 }
 
+.float_right {
+    float: right;
+}
+
 .break {
     clear: both;
 }
@@ -37,4 +41,9 @@ body {
 
 #footer {
     text-align: center;
+}
+
+.forum_table .forum_desc p {
+    padding: 0;
+    margin: 0;
 }
