Updated bad postoffice views, news and forum topics have RSS feed capabilities

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -11,3 +11,6 @@
     </tr>
   </table>
 <% end %>
+<div class="center">
+  <%= link_to image_tag("rss_badge.png", :border => 0, :alt => "News RSS Feed"), news_index_path(:format => 'rss') %>
+</div>
