Moved RSS tag for site to footer, added missing RSS icon for forum posts, fixed some RSS formatting issues

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
           <a href="http://lanrails.jonnyfunfun.com/" target="_blank">
             <img src="/images/lanrails.png" border="0" alt="Powered by LANRails" style="margin-top: 4px;"/>
           </a>
+          <%= link_to image_tag("site_rss_badge.png", :border => 0, :alt => "Site News RSS Feed"), news_index_path(:format => 'rss') %>
         </div>
 	</body>
 </html>
