Added another clause to the cleanup regex in forum posts - still no idea why a weird /^--- \n-( \|-)?/ is showing up upon save

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
     </td>
     <td valign="top">
       <span class="posted_time">Posted at <%= p.created_at %></span><br/><hr/>
-      <%= p.body.gsub(/^--- \n-/,'') %>
+      <%= p.body.gsub(/^--- \n-( \|-)?/,'') %>
     </td>
   </tr>
 </table><br/>
