Added recovery options, added the ability to change your password

--- a/app/views/accounts/activate.html.erb
+++ b/app/views/accounts/activate.html.erb
@@ -1,2 +1,2 @@
-<h1>Account#rescue</h1>
-<p>Find me in app/views/account/rescue.html.erb</p>
+<h1>Account active!</h1>
+<p>Thank you for verifying your account.  Your account is now active and ready to use!</p>
