--- a/app/views/accounts/login.html.erb
+++ b/app/views/accounts/login.html.erb
@@ -7,3 +7,4 @@
 	<b>Password:</b> <%= password_field nil, :password %><br />
 	<%= submit_tag %>
 <% end %>
+        <br/><span class="center"><%= link_to 'Forgot your password?', :controller => 'accounts', :action => 'forgot_password' %></span>
