--- a/app/views/postoffice/new_password_email.html.erb
+++ b/app/views/postoffice/new_password_email.html.erb
@@ -1,5 +1,5 @@
 Hello <%= @user.username %>!  This is an automated message assisting you in recovering your account.  Your new password is now <b><%= @newpass %></b>.  You may now use this to log in to your account.
 <br/>
-<%= link_to root_path %>
+<%= link_to url_for(:controller => 'accounts', :action => 'login', :only_path => false).to_s, url_for(:controller => 'accounts', :action => 'login', :only_path => false) %>
 <br/>
 This message is sent from an unattended mailbox.  Please do not reply.
