--- a/app/views/widgets/_login_box.html.erb
+++ b/app/views/widgets/_login_box.html.erb
@@ -7,7 +7,7 @@
       <% end %>
       <%= button_to 'Register', new_account_path, :method => :get, :class => 'float_right register_button btn' %>
     </div>
-    <div class="break"></div>
+    <div class="break center"><%= link_to 'Forgot your password?', forgot_password_path, :style => 'font-size: 8pt;' %></div>
 <% else %>
   Welcome back<br/>
   <b><%= User.current.username %></b>!<br/>
