--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -4,12 +4,14 @@ You are registering for <%= @party.name %>
       <%= link_to "Different Party?", party_index_path, :class => 'small_link' %>
   <% end %>
 <br/>
-<%= @party.description %>
 <br/>
 <% if @party.price > 0 then %>
   The registration fee for this party is $<%= @party.price %>.  You will be shown options to pre-pay after confirming your registration.
 <% end %>
+<br/><br/>
+<div class="center">
 <% form_for :registration, @registration, :url => {:controller => 'registrations', :action => 'create', :party_id => params[:party_id]} do |f| %>
   <%= error_messages_for 'registration', :header_message => "Unable to Register!", :message => "There were the following errors when trying to register you" %>
   <%= f.submit 'Register Me!', :class => 'btn' %>
 <% end %>
+</div>
