Lots of changes to the tournaments and teams; you can now create teams and register the teams for tournaments - nothing yet on joining teams, inviting to join teams, or general team control other than disbanding

--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -19,7 +19,7 @@
   </tr>
   <% @regs.each do |r| %>
   <tr>
-    <td><%= if User.current && User.current.moderator? then link_to(r.user.username, party_registration_path(:party_id => @party.id, :id => r)) else r.user.username end %></td>
+    <td><%= link_to r.user.username, profile_path(r.user) %></td>
     <td><%= r.created_at %></td>
   </tr>
   <% end %>
