--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -10,6 +10,12 @@
   <% if User.current && @team.leader == User.current then %>
     <div class="control_panel">
       <h4>Team Control Panel</h4><br/>
+      <% form_for :invitaiton, @invitation, :url => {:controller => 'team_membership', :action => 'moderate'} do |f| %>
+        <%= hidden_field_tag 'action', 'invite' %>
+        Invite a new member:<br/>
+        <%= f.select :user_id, User.find(:all, :joins => 'LEFT JOIN team_memberships ON team_memberships.user_id = user.id', :conditions => "team_memberships.id IS NULL").collect {|usr| [ usr.name, usr.id ]} %>
+        <br/><%= f.submit "Send Invitation" %><br/>
+      <% end %>
       <%= link_to 'Disband Team', party_team_path, :method => 'DELETE', :confirm => 'Are you ABSOLUTELY sure you want to disband your team?  This action cannot be undone!' %>
     </div>
   <% end %>
